--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: 51.15.239.209
+  username: jh
+  password: sheepworld
 
 development:
   <<: *default
-  database: greday_development
+  database: greday
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
