Migration to Semantic UI 99%

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ default: &default
 
 development:
   <<: *default
-  database: opto_dev
+  database: plusview
 
 production:
   <<: *default
-  database: greday
+  database: plusview
